# libgit4cpp

./: .gitignore  LIBNO  README.md  meson.build
data/: Doxyfile  style.css
debian/: changelog  check_changelog  clean  control  copyright
docs/: Error_8cc.html  Error_8cc__incl.map  Error_8cc__incl.md5  Error_8h.html  Error_8h__dep__incl.map  Error_8h__dep__incl.md5  Error_8h__incl.map  Error_8h__incl.md5  Error_8h_source.html  GitRepository_8cc.html  GitRepository_8cc__incl.map  GitRepository_8cc__incl.md5  GitRepository_8h.html  GitRepository_8h__dep__incl.map  GitRepository_8h__dep__incl.md5  GitRepository_8h__incl.map  GitRepository_8h__incl.md5  GitRepository_8h_source.html  LibGitPointer_8cc.html  LibGitPointer_8cc__incl.map  LibGitPointer_8cc__incl.md5  LibGitPointer_8h.html  LibGitPointer_8h__dep__incl.map  LibGitPointer_8h__dep__incl.md5  LibGitPointer_8h__incl.map  LibGitPointer_8h__incl.md5  LibGitPointer_8h_source.html  Remote_8cc.html  Remote_8cc__incl.map  Remote_8cc__incl.md5  Remote_8h.html  Remote_8h__dep__incl.map  Remote_8h__dep__incl.md5  Remote_8h__incl.map  Remote_8h__incl.md5  Remote_8h_source.html  Repository_8cc.html  Repository_8cc__incl.map  Repository_8cc__incl.md5  Repository_8h.html  (+95 more)
include/: meson.build
include/libgit4cpp/: Error.h  GitRepository.h  LibGitPointer.h  Remote.h  Repository.h  libgit4cpp.h  meson.build  types.h  wrapper_functions.h
src/: Error.cc  GitRepository.cc  LibGitPointer.cc  Remote.cc  Repository.cc  credentials_callback.cc  credentials_callback.h  meson.build  wrapper_functions.cc
subprojects/: catch2.wrap
(+11 files in other folders)
