# The public_headers are tested for self-containment in the tests section
public_headers = [
    'Error.h',
    'Repository.h',
    'libgit4cpp.h',
    'Remote.h',
    'types.h',
    'wrapper_functions.h',
]

install_headers(
    files(public_headers),
    subdir: meson.project_name(),
)

# vi:ts=4:sw=4:sts=4:et:syn=conf
